--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -9,11 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Libraries"
+    "# Libraries\n",
+    "import scipy as sp\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -32,11 +34,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We can say with a 80% probability that the real mean will fall in the confidence itnerval of: \n",
+      " 174.78864498217214 172.1446883511612\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "# we use n distribution to find mean interval\n",
+    "# no need for t distribution as we have the real sdev\n",
+    "heights = [167, 167, 168, 168, 168, 169, 171, 172, 173, 175, 175, 175, 177, 182, 195]\n",
+    "stdev = 4\n",
+    "alpha = 0.2\n",
+    "n = len(heights)\n",
+    "sample_mean = sum(heights)/n\n",
+    "Z = 1.28 #z value from z value table \n",
+    "\n",
+    "lower_bound = sample_mean - (Z*stdev/(n**0.5))\n",
+    "upper_bound =  sample_mean + (Z*stdev/(n**0.5))\n",
+    "\n",
+    "print(\"We can say with a 80% probability that the real mean will fall in the confidence itnerval of: \\n\", upper_bound, lower_bound)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(172.45327825412346, 174.48005507920988)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#method 2\n",
+    "R = sp.stats.norm.interval(alpha,loc=sample_mean,scale=stdev)\n",
+    "R"
    ]
   },
   {
@@ -51,11 +97,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(26.874338653144925, 27.125661346855075) (26.7466528968642, 27.2533471031358)\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "# assuming normal distribution \n",
+    "# not really clear what im meant to calculate here.... \n",
+    "# no mean or std of population give, no data to calculate std or mean of sample or population\n",
+    "n = 105\n",
+    "loss_n = 27\n",
+    "sample_proportion = 27/105\n",
+    "alpha2 = 0.2 \n",
+    "alpha1 = 0.1\n",
+    "\n",
+    "interval1 = sp.stats.norm.interval(alpha1,loc=loss_n)\n",
+    "interval2 = sp.stats.norm.interval(alpha2,loc=loss_n)\n",
+    "\n",
+    "print(interval1, interval2)"
    ]
   },
   {
@@ -70,11 +137,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([164.05312696, 164.05312696, 165.04624258, 165.04624258,\n",
+       "        165.04624258, 166.03937878, 168.02571219, 169.01890903,\n",
+       "        170.01212574, 171.99861805, 171.99861805, 171.99861805,\n",
+       "        173.98518775, 178.95194208, 191.86759243]),\n",
+       " array([168.63553785, 168.63553785, 169.64241658, 169.64241658,\n",
+       "        169.64241658, 170.64927481, 172.66293045, 173.66972822,\n",
+       "        174.6765062 , 176.69000344, 176.69000344, 176.69000344,\n",
+       "        178.70342352, 183.73664463, 196.82093636]))"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "# again, not really sure what is expected from us - do we graph it?\n",
+    "#below is the height array taking in the max and min values per variable possible accordign to the confidence interval\n",
+    "\n",
+    "alpha = 0.1\n",
+    "n = len(heights)\n",
+    "k = n-1\n",
+    "\n",
+    "R = sp.stats.chi2.interval(alpha, heights)\n",
+    "R"
    ]
   },
   {
@@ -93,11 +187,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.261584506229708 9.738415493770292\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here - normal distribution\n",
+    "# sample sdev\n",
+    "# use t distribution\n",
+    "from statistics import stdev\n",
+    "\n",
+    "\n",
+    "acid = [9.8, 10.2, 10.4, 9.8, 10.0, 10.2, 9.6]\n",
+    "alpha = 0.05\n",
+    "n = len(acid)\n",
+    "sample_mean = sum(acid)/n\n",
+    "sample_std = stdev(acid)\n",
+    "k = n-1\n",
+    "T = 2.446899\n",
+    "upper = sample_mean + (T*sample_std/(n**0.5))\n",
+    "lower = sample_mean - (T*sample_std/(n**0.5))\n",
+    "\n",
+    "print (upper, lower)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([9.98223717, 9.98223717, 9.98223733, 9.98223733, 9.98223733,\n",
+       "        9.98223749, 9.98223779, 9.98223795, 9.98223809, 9.98223839,\n",
+       "        9.98223839, 9.98223839, 9.98223868, 9.98223937, 9.982241  ]),\n",
+       " array([10.01776283, 10.01776283, 10.01776267, 10.01776267, 10.01776267,\n",
+       "        10.01776251, 10.01776221, 10.01776205, 10.01776191, 10.01776161,\n",
+       "        10.01776161, 10.01776161, 10.01776132, 10.01776063, 10.017759  ]))"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R = stats.t.interval (alpha, heights, loc=sample_mean,scale=sample_std)\n",
+    "R # HELP"
    ]
   },
   {
@@ -187,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
